--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <head>
 <meta name=generator content="Hugo 0.92.1">
 <title>
-Hello Friend —
-A simple theme for Hugo
+Hedmad's Blog —
+A place of code and pain
 </title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=description content="A simple theme for Hugo">
+<meta name=description content="A place of code and pain">
 <meta name=keywords content>
 <meta name=robots content="noodp">
 <link rel=canonical href=https://mrhedmad.github.io/blog/>
@@ -22,33 +22,33 @@ A simple theme for Hugo
 <link href=https://mrhedmad.github.io/blog/assets/fonts/Inter-Bold.woff2 rel=preload type=font/woff2 as=font crossorigin>
 <link href=https://mrhedmad.github.io/blog/assets/fonts/Inter-BoldItalic.woff2 rel=preload type=font/woff2 as=font crossorigin>
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="Hello Friend">
+<meta name=twitter:title content="Hedmad's Blog">
 <meta name=twitter:description content>
-<meta property="og:title" content="Hello Friend">
+<meta property="og:title" content="Hedmad's Blog">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://mrhedmad.github.io/blog/"><meta property="og:site_name" content="Hello Friend">
-<link rel=alternate type=application/rss+xml href=/blog/index.xml title="Hello Friend">
+<meta property="og:url" content="https://mrhedmad.github.io/blog/"><meta property="og:site_name" content="Hedmad's Blog">
+<link rel=alternate type=application/rss+xml href=/blog/index.xml title="Hedmad's Blog">
 </head>
 <body class=dark-theme>
 <div class=container>
 <header class=header>
 <span class=header__inner>
-<a href=/ class=logo style=text-decoration:none>
+<a href=https://mrhedmad.github.io/blog/ class=logo style=text-decoration:none>
 <span class=logo__mark><svg xmlns="http://www.w3.org/2000/svg" class="greater-icon" viewBox="0 0 44 44"><path fill="none" d="M15 8l14.729 14.382L15 35.367"/></svg>
 </span>
-<span class=logo__text>hello friend</span>
+<span class=logo__text>hedmad@blog</span>
 <span class=logo__cursor></span>
 </a>
 <span class=header__right>
 <nav class=menu>
 <ul class="menu__inner menu__inner--desktop">
 <li><a href=/blog/about>About</a></li>
-<li><a href=/blog/showcase>Showcase</a></li>
+<li><a href=/blog/archive>Archive</a></li>
 </ul>
 <ul class="menu__inner menu__inner--mobile">
 <li><a href=/blog/about>About</a></li>
-<li><a href=/blog/showcase>Showcase</a></li>
+<li><a href=/blog/archive>Archive</a></li>
 </ul>
 </nav>
 <span class=menu-trigger><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/></svg>
@@ -60,19 +60,6 @@ A simple theme for Hugo
 </header>
 <div class=content>
 <div class=posts>
-<div class="post on-list">
-<h1 class=post-title><a href=https://mrhedmad.github.io/blog/posts/testpost/>Hello Friend</a></h1>
-<div class=post-meta>
-<span class=post-date>
-1986-09-17
-</span>
-<span class=post-author>— Written by Elliot</span>
-</div>
-<div class=post-content>
-&ldquo;Hello, friend?&rdquo; That&rsquo;s lame. Maybe I should give you a name?
-</div>
-<div><a class="read-more button" href=/blog/posts/testpost/>Read more →</a></div>
-</div>
 <div class=pagination>
 <div class=pagination__buttons>
 </div>
@@ -81,18 +68,7 @@ A simple theme for Hugo
 </div>
 <footer class=footer>
 <div class=footer__inner>
-<a href=/ class=logo style=text-decoration:none>
-<span class=logo__mark><svg xmlns="http://www.w3.org/2000/svg" class="greater-icon" viewBox="0 0 44 44"><path fill="none" d="M15 8l14.729 14.382L15 35.367"/></svg>
-</span>
-<span class=logo__text>hello friend</span>
-<span class=logo__cursor></span>
-</a>
-<div class=copyright>
-<span>© 2022 Powered by
-<a href=https://gohugo.io target=_blank rel=noopener>Hugo</a></span>
-<span>Theme created by
-<a href=https://twitter.com/panr target=_blank rel=noopener>panr</a></span>
-</div>
+<div class="copyright copyright--user">© Luca Visentin - 2022</div>
 </div>
 </footer>
 <script src=https://mrhedmad.github.io/blog/assets/main.js></script>
